--- a/config-example.json
+++ b/config-example.json
@@ -4,7 +4,7 @@
     "port": 4000,
     "address": "192.168.1.32",
     "servers": [
-       {"address": "192.168.1.36", "port":4000}
+       {"protocol": "http", "address": "192.168.1.36", "port":4000, "path":"graphql"}
     ],
     "accept": ["general"]
 }
